[package]
name = "hv_sock"
version = "0.1.0"
edition = "2021"

[features]
host-registry = ["dep:windows-registry", "dep:getset"]

[dependencies]
socket2 = "0.5.7"

[target."cfg(windows)".dependencies]
uuid = "1.10.0"
windows = { version = "0.58.0", features = ["Win32_Networking_WinSock", "Win32_System_Hypervisor"] }
windows-registry = { version = "0.2.0", optional = true }
getset = { version = "0.1.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.155"
